fixed more quiz stuff
