# apps/api/openapi.yml
@@ -204,7 +204,7 @@ paths:
                         level: 0
                         name: John Doe
                         age: 20
-                        updatedAt: &a2 2025-04-04T11:37:24.404Z
+                        updatedAt: &a2 2025-04-04T15:37:20.567Z
                 MiniUserResponse:
                   value:
                     metadata:
@@ -304,7 +304,7 @@ paths:
                         name: John Doe
                         age: 20
                         updatedAt: *a2
-                        createdAt: 2025-04-04T11:37:24.404Z
+                        createdAt: 2025-04-04T15:37:20.567Z
                         following: 0
                         location: New York
           description: ""
@@ -362,7 +362,7 @@ paths:
                     level: 0
                     name: John Doe
                     age: 20
-                    updatedAt: &a3 2025-04-04T11:37:24.404Z
+                    updatedAt: &a3 2025-04-04T15:37:20.567Z
                 MiniUserResponse:
                   value:
                     id: 1
@@ -394,7 +394,7 @@ paths:
                     name: John Doe
                     age: 20
                     updatedAt: *a3
-                    createdAt: 2025-04-04T11:37:24.404Z
+                    createdAt: 2025-04-04T15:37:20.567Z
                     following: 0
                     location: New York
           description: ""
@@ -758,7 +758,7 @@ paths:
                         description: A community of chess enthusiasts
                         type: Sports Club
                         focus: Chess
-                        updatedAt: 2025-04-04T11:37:24.545Z
+                        updatedAt: 2025-04-04T15:37:20.674Z
                         memberCount: 50
                 extended:
                   value:
@@ -783,9 +783,9 @@ paths:
                         description: A community of chess enthusiasts
                         type: Sports Club
                         focus: Chess
-                        updatedAt: 2025-04-04T11:37:24.545Z
+                        updatedAt: 2025-04-04T15:37:20.674Z
                         memberCount: 50
-                        createdAt: 2025-04-04T11:37:24.545Z
+                        createdAt: 2025-04-04T15:37:20.674Z
                         tournamentCount: 10
                         subscriberCount: 100
           description: ""
@@ -812,7 +812,7 @@ paths:
                 description: A community of chess enthusiasts
                 type: Sports Club
                 focus: Chess
-                updatedAt: 2025-04-04T11:37:24.545Z
+                updatedAt: 2025-04-04T15:37:20.674Z
                 memberCount: 50
           description: ""
       tags: *a5
@@ -865,7 +865,7 @@ paths:
                     description: A community of chess enthusiasts
                     type: Sports Club
                     focus: Chess
-                    updatedAt: 2025-04-04T11:37:24.545Z
+                    updatedAt: 2025-04-04T15:37:20.674Z
                     memberCount: 50
                 extended:
                   value:
@@ -877,9 +877,9 @@ paths:
                     description: A community of chess enthusiasts
                     type: Sports Club
                     focus: Chess
-                    updatedAt: 2025-04-04T11:37:24.545Z
+                    updatedAt: 2025-04-04T15:37:20.674Z
                     memberCount: 50
-                    createdAt: 2025-04-04T11:37:24.545Z
+                    createdAt: 2025-04-04T15:37:20.674Z
                     tournamentCount: 10
                     subscriberCount: 100
               schema:
@@ -918,7 +918,7 @@ paths:
                 description: A community of chess enthusiasts
                 type: Sports Club
                 focus: Chess
-                updatedAt: 2025-04-04T11:37:24.545Z
+                updatedAt: 2025-04-04T15:37:20.674Z
                 memberCount: 50
           description: ""
       tags: *a5
@@ -982,7 +982,7 @@ paths:
                   description: A community of chess enthusiasts
                   type: Sports Club
                   focus: Chess
-                  updatedAt: 2025-04-04T11:37:24.545Z
+                  updatedAt: 2025-04-04T15:37:20.674Z
                   memberCount: 50
                 members: []
           description: ""
@@ -1010,7 +1010,7 @@ paths:
                   description: A community of chess enthusiasts
                   type: Sports Club
                   focus: Chess
-                  updatedAt: 2025-04-04T11:37:24.545Z
+                  updatedAt: 2025-04-04T15:37:20.674Z
                   memberCount: 50
                 tournaments: []
           description: ""
@@ -1038,7 +1038,7 @@ paths:
                   description: A community of chess enthusiasts
                   type: Sports Club
                   focus: Chess
-                  updatedAt: 2025-04-04T11:37:24.545Z
+                  updatedAt: 2025-04-04T15:37:20.674Z
                   memberCount: 50
                 followers: []
           description: ""
@@ -1230,7 +1230,7 @@ paths:
                           name: Cool Group
                           logo: https://example.com/logo.jpg
                           abbreviation: CG
-                        createdAt: 2025-04-04T11:37:24.551Z
+                        createdAt: 2025-04-04T15:37:20.678Z
                 UserMembershipResponseWithDates:
                   value:
                     metadata:
@@ -1251,7 +1251,7 @@ paths:
                         order: desc
                         responseType: USERMEMBERSHIPRESPONSEWITHDATES
                     results:
-                      - createdAt: 2025-04-04T11:37:24.551Z
+                      - createdAt: 2025-04-04T15:37:20.678Z
                         isFake: false
                         role: member
                         country: country
@@ -1283,7 +1283,7 @@ paths:
                         role: member
                         user: *a7
                         group: *a8
-                        createdAt: 2025-04-04T11:37:24.551Z
+                        createdAt: 2025-04-04T15:37:20.678Z
                         country: country
                         name: name
                         logo: logo
@@ -1372,10 +1372,10 @@ paths:
                       name: Cool Group
                       logo: https://example.com/logo.jpg
                       abbreviation: CG
-                    createdAt: 2025-04-04T11:37:24.551Z
+                    createdAt: 2025-04-04T15:37:20.678Z
                 UserMembershipResponseWithDates:
                   value:
-                    createdAt: 2025-04-04T11:37:24.551Z
+                    createdAt: 2025-04-04T15:37:20.678Z
                     isFake: false
                     role: member
                     country: country
@@ -1389,7 +1389,7 @@ paths:
                     role: member
                     user: *a9
                     group: *a10
-                    createdAt: 2025-04-04T11:37:24.551Z
+                    createdAt: 2025-04-04T15:37:20.678Z
                     country: country
                     name: name
                     logo: logo
@@ -1734,7 +1734,7 @@ paths:
                   value:
                     id: 1
                     username: john_doe
-                    createdAt: 2025-04-04T11:37:24.560Z
+                    createdAt: 2025-04-04T15:37:20.684Z
                     bio: I am a user
                     profilePicture: https://example.com/image.jpg
                     country: USA
@@ -1743,11 +1743,11 @@ paths:
                     followers: 0
                     level: 0
                     isFake: false
-                    updatedAt: 2025-04-04T11:37:24.560Z
+                    updatedAt: 2025-04-04T15:37:20.684Z
                     age: 20
                 mini:
                   value:
-                    createdAt: 2025-04-04T11:37:24.560Z
+                    createdAt: 2025-04-04T15:37:20.684Z
                     id: 1
                     isFake: false
                     username: john_doe
@@ -1889,7 +1889,7 @@ paths:
                         level: 0
                         name: John Doe
                         age: 20
-                        updatedAt: 2025-04-04T11:37:24.404Z
+                        updatedAt: 2025-04-04T15:37:20.567Z
                         groupId: 1
                         message: I would like to join this group
                 with-mini-user:
@@ -1911,7 +1911,7 @@ paths:
                         username: john_doe
                         isFake: false
                         profilePicture: https://example.com/image.jpg
-                        createdAt: 2025-04-04T11:37:24.566Z
+                        createdAt: 2025-04-04T15:37:20.688Z
                 with-group:
                   value:
                     metadata:
@@ -1935,7 +1935,7 @@ paths:
                         description: A community of chess enthusiasts
                         type: Sports Club
                         focus: Chess
-                        updatedAt: 2025-04-04T11:37:24.545Z
+                        updatedAt: 2025-04-04T15:37:20.674Z
                         memberCount: 50
                         userId: 1
                         message: I would like to join this group
@@ -1958,7 +1958,7 @@ paths:
                         name: Chess Club
                         abbreviation: CC
                         logo: https://example.com/chess-club-logo.jpg
-                        createdAt: 2025-04-04T11:37:24.566Z
+                        createdAt: 2025-04-04T15:37:20.688Z
           description: ""
       tags: &a13
         - group-join-requests
@@ -2061,7 +2061,7 @@ paths:
                     level: 0
                     name: John Doe
                     age: 20
-                    updatedAt: 2025-04-04T11:37:24.404Z
+                    updatedAt: 2025-04-04T15:37:20.567Z
                     groupId: 1
                     message: I would like to join this group
                 with-mini-user:
@@ -2070,7 +2070,7 @@ paths:
                     username: john_doe
                     isFake: false
                     profilePicture: https://example.com/image.jpg
-                    createdAt: 2025-04-04T11:37:24.566Z
+                    createdAt: 2025-04-04T15:37:20.688Z
                 with-group:
                   value:
                     id: 1
@@ -2081,7 +2081,7 @@ paths:
                     description: A community of chess enthusiasts
                     type: Sports Club
                     focus: Chess
-                    updatedAt: 2025-04-04T11:37:24.545Z
+                    updatedAt: 2025-04-04T15:37:20.674Z
                     memberCount: 50
                     userId: 1
                     message: I would like to join this group
@@ -2091,7 +2091,7 @@ paths:
                     name: Chess Club
                     abbreviation: CC
                     logo: https://example.com/chess-club-logo.jpg
-                    createdAt: 2025-04-04T11:37:24.566Z
+                    createdAt: 2025-04-04T15:37:20.688Z
               schema:
                 anyOf:
                   - $ref: "#/components/schemas/GroupJoinRequestWithUserResponse"
@@ -2224,7 +2224,7 @@ paths:
                         followers: 0
                         isFake: false
                         level: 0
-                        updatedAt: 2025-04-04T11:37:24.573Z
+                        updatedAt: 2025-04-04T15:37:20.692Z
                         message: Would you like to join our group?
                         groupId: 1
                         age: 20
@@ -2248,7 +2248,7 @@ paths:
                       - id: 1
                         username: john_doe
                         profilePicture: https://example.com/image.jpg
-                        createdAt: 2025-04-04T11:37:24.573Z
+                        createdAt: 2025-04-04T15:37:20.692Z
                         isFake: false
                 with-group:
                   value:
@@ -2301,7 +2301,7 @@ paths:
                         name: Example Group
                         abbreviation: EG
                         logo: https://example.com/logo.jpg
-                        createdAt: 2025-04-04T11:37:24.573Z
+                        createdAt: 2025-04-04T15:37:20.692Z
           description: ""
       tags: &a16
         - group-invites
@@ -2396,7 +2396,7 @@ paths:
                     followers: 0
                     isFake: false
                     level: 0
-                    updatedAt: 2025-04-04T11:37:24.573Z
+                    updatedAt: 2025-04-04T15:37:20.692Z
                     message: Would you like to join our group?
                     groupId: 1
                     age: 20
@@ -2405,7 +2405,7 @@ paths:
                     id: 1
                     username: john_doe
                     profilePicture: https://example.com/image.jpg
-                    createdAt: 2025-04-04T11:37:24.573Z
+                    createdAt: 2025-04-04T15:37:20.692Z
                     isFake: false
                 with-group:
                   value:
@@ -2428,7 +2428,7 @@ paths:
                     name: Example Group
                     abbreviation: EG
                     logo: https://example.com/logo.jpg
-                    createdAt: 2025-04-04T11:37:24.573Z
+                    createdAt: 2025-04-04T15:37:20.692Z
           description: ""
       tags: *a16
     patch:
@@ -3373,8 +3373,8 @@ paths:
                     tournamentId: 1
                     stageStatus: ongoing
                     rostersParticipating: 0
-                    startDate: &a35 2025-04-04T11:37:24.605Z
-                    endDate: &a36 2025-04-04T11:37:24.605Z
+                    startDate: &a35 2025-04-04T15:37:20.719Z
+                    endDate: &a36 2025-04-04T15:37:20.719Z
                     stageType: round_robin
                     description: Initial group stage of the tournament
                     logo: https://example.com/stage-logo.jpg
@@ -3555,8 +3555,8 @@ paths:
                     tournamentId: 1
                     stageStatus: ongoing
                     rostersParticipating: 0
-                    startDate: &a42 2025-04-04T11:37:24.605Z
-                    endDate: &a43 2025-04-04T11:37:24.605Z
+                    startDate: &a42 2025-04-04T15:37:20.719Z
+                    endDate: &a43 2025-04-04T15:37:20.719Z
                     stageType: round_robin
                     description: Initial group stage of the tournament
                     logo: https://example.com/stage-logo.jpg
@@ -5026,15 +5026,15 @@ paths:
                         tournament:
                           id: 1
                           type: league
-                          startDate: 2025-04-04T11:37:24.617Z
+                          startDate: 2025-04-04T15:37:20.732Z
                           name: Chess Championship
                         user:
                           id: 1
                           username: john_doe
                           isFake: false
                           profilePicture: https://example.com/image.jpg
-                        createdAt: 2025-04-04T11:37:24.617Z
-                        updatedAt: 2025-04-04T11:37:24.617Z
+                        createdAt: 2025-04-04T15:37:20.732Z
+                        updatedAt: 2025-04-04T15:37:20.732Z
                 base:
                   value:
                     metadata:
@@ -5137,15 +5137,15 @@ paths:
                         tournament:
                           id: 1
                           type: league
-                          startDate: 2025-04-04T11:37:24.617Z
+                          startDate: 2025-04-04T15:37:20.732Z
                           name: Chess Championship
                         user:
                           id: 1
                           username: john_doe
                           isFake: false
                           profilePicture: https://example.com/image.jpg
-                        createdAt: 2025-04-04T11:37:24.617Z
-                        updatedAt: 2025-04-04T11:37:24.617Z
+                        createdAt: 2025-04-04T15:37:20.732Z
+                        updatedAt: 2025-04-04T15:37:20.732Z
                 base:
                   value:
                     metadata:
@@ -6210,7 +6210,7 @@ paths:
                         name: New York
                         lat: 40.7128
                         lng: -74.006
-                        createdAt: 2025-04-04T11:37:24.543Z
+                        createdAt: 2025-04-04T15:37:20.673Z
           description: ""
       tags: *a89
     post:
@@ -6271,7 +6271,7 @@ paths:
                       name: New York
                       lat: 40.7128
                       lng: -74.006
-                      createdAt: 2025-04-04T11:37:24.543Z
+                      createdAt: 2025-04-04T15:37:20.673Z
       tags: *a89
     patch:
       operationId: LocationController_update
@@ -6417,6 +6417,25 @@ paths:
                 $ref: "#/components/schemas/QuizResponse"
       tags: &a91
         - quiz
+  /quiz/detailed/{quizId}:
+    get:
+      operationId: QuizController_getDetailedQuiz
+      parameters:
+        - name: quizId
+          required: true
+          in: path
+          schema:
+            type: number
+      responses:
+        "200":
+          description: Returns a detailed quiz
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/QuizResponseExtended"
+      tags: *a91
+      security:
+        - bearer: []
   /quiz:
     get:
       operationId: QuizController_findAll
@@ -9802,8 +9821,6 @@ components:
             - order
             - hotspot
             - programming
-        order:
-          type: number
         timeLimit:
           type: number
         points:
@@ -9823,7 +9840,6 @@ components:
         image:
           type: string
       required:
-        - quizId
         - question
         - questionType
     CreateQuizRequest:
